syntax = "proto3";

package PRODUCT_SERVICE;

service ProductService {
  rpc CreateCategory(CreateCategoryRequest) returns (CategoryResponse);
  rpc UpdateCategory(UpdateCategoryRequest) returns (CategoryResponse);
  rpc DeleteCategory(DeleteCategoryRequest) returns (CategoryResponse);

  rpc CreateBrand(CreateBrandRequest) returns (BrandResponse);
  rpc UpdateBrand(UpdateBrandRequest) returns (BrandResponse);
  rpc DeleteBrand(DeleteBrandRequest) returns (BrandResponse);

  rpc CreateAttribute(CreateAttributeRequest) returns (AttributeResponse);
  rpc UpdateAttribute(UpdateAttributeRequest) returns (AttributeResponse);
  rpc DeleteAttribute(DeleteAttributeRequest) returns (AttributeResponse);
}

//====================================== Category ======================================//
message ParentCategoryResponse {
  string id = 1;
  string name = 2;
}

message CategoryResponse {
  string id = 1;
  string name = 2;
  string logo = 3;
  string parentCategoryId = 4;
  string createdById = 5;
  string updatedById = 6;
  string deletedById = 7;
  string deletedAt = 8;
  string createdAt = 9;
  string updatedAt = 10;
  optional ParentCategoryResponse parentCategory = 11;
}

//==================== CreateCategoryRequest ====================//
message CreateCategoryRequest {
  optional string processId = 1;
  string name = 2;
  string logo = 3;
  optional string parentCategoryId = 4;
  optional string createdById = 5;
}

//==================== UpdateCategoryRequest ====================//
message UpdateCategoryRequest {
  optional string processId = 1;
  string id = 2;
  optional string name = 3;
  optional string logo = 4;
  optional string parentCategoryId = 5;
  optional string updatedById = 6;
}

//==================== DeleteCategoryRequest ====================//
message DeleteCategoryRequest {
  optional string processId = 1;
  string id = 2;
  optional string deletedById = 3;
}

//========================================== Brand ==========================================//
message BrandResponse {
  string id = 1;
  string name = 2;
  string logo = 3;
  string createdById = 4;
  string updatedById = 5;
  string deletedById = 6;
  string deletedAt = 7;
  string createdAt = 8;
  string updatedAt = 9;
}

//==================== CreateBrandRequest ====================//
message CreateBrandRequest {
  optional string processId = 1;
  string name = 2;
  string logo = 3;
  optional string createdById = 4;
}

//==================== UpdateBrandRequest ====================//
message UpdateBrandRequest {
  optional string processId = 1;
  string id = 2;
  optional string name = 3;
  optional string logo = 4;
  optional string updatedById = 5;
}

//==================== DeleteBrandRequest ====================//
message DeleteBrandRequest {
  optional string processId = 1;
  string id = 2;
  optional string deletedById = 3;
}

//======================================== Attribute =========================================//
message AttributeResponse {
  string id = 1;
  string key = 2;
  string createdById = 3;
  string updatedById = 4;
  string deletedById = 5;
  string deletedAt = 6;
  string createdAt = 7;
  string updatedAt = 8;
}

//==================== CreateAttributeRequest ====================//
message CreateAttributeRequest {
  optional string processId = 1;
  string key = 2;
  optional string createdById = 3;
}

//==================== UpdateAttributeRequest ====================//
message UpdateAttributeRequest {
  optional string processId = 1;
  string id = 2;
  string key = 3;
  optional string updatedById = 4;
}

//==================== DeleteAttributeRequest ====================//
message DeleteAttributeRequest {
  optional string processId = 1;
  string id = 2;
  optional string deletedById = 3;
}